<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.helpinghands.Fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.helpinghands.Fragments.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.helpinghands.Fragments.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.helpinghands.Activity.AboutUs"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/activity_about_us" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.helpinghands.Activity.ContactUs"
        android:label="@string/menu_contact"
        tools:layout="@layout/activity_contact_us" />

</navigation>